# models

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: baseline.ipynb  dataset.ipynb  offline.ipynb  online.ipynb
realchords_data_nottingham/: test_src.npy  test_tgt.npy  train_src.npy  train_tgt.npy  valid_src.npy  valid_tgt.npy  vocab_chord.json  vocab_melody.json
realchords_data_pop909/: test_src.npy  test_tgt.npy  train_src.npy  train_tgt.npy  valid_src.npy  valid_tgt.npy  vocab_chord.json  vocab_melody.json
realchords_data_wikifonia/: test_src.npy  test_tgt.npy  valid_src.npy  valid_tgt.npy  vocab_chord.json  vocab_melody.json
scripts/: preprocess.py
src/musicagent/: __init__.py  cli.py  config.py  dataset.py  model.py  train.py  utils.py
src/musicagent/data/: __init__.py  base.py  joint.py  offline.py  online.py
src/musicagent/data/sources/: __init__.py  nottingham.py  pop909.py  wikifonia.py
src/musicagent/eval/: __init__.py  metrics.py  offline.py  online.py
src/musicagent/models/: __init__.py  components.py  offline.py  online.py
src/musicagent/scripts/: __init__.py  nottingham.py  pop909.py  preprocess.py  wikifonia.py
src/musicagent/training/: __init__.py  offline.py  online.py
src/musicagent/utils/: __init__.py  analysis.py  artifacts.py  config.py  core.py  loaders.py  registry.py  train.py  visualization.py
sweeps/: offline_lr_schedule.yaml
tests/: test_dataset.py  test_eval_offline.py  test_eval_online.py  test_integration.py  test_metrics.py  test_model.py  test_preprocess.py  test_train.py  test_utils.py
