[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musicagent"
version = "0.1.0"
description = "Melody to Chord prediction"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "ijson>=3.2.0",
    "tqdm>=4.65.0",
    "wandb>=0.16.0",
    "matplotlib<3.10",
    "matplotlib-inline>=0.2.1",
]

[project.scripts]
musicagent-train = "musicagent.training:main"
musicagent-train-offline = "musicagent.training.offline:main"
musicagent-train-online = "musicagent.training.online:main"
musicagent-preprocess = "musicagent.scripts.preprocess:main"
musicagent-eval-offline = "musicagent.eval.offline:main"
musicagent-eval-online = "musicagent.eval.online:main"
musicagent-eval = "musicagent.eval:main"

[tool.hatch.build.targets.wheel]
packages = ["src/musicagent"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["musicagent"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
